--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   intl: ^0.20.2
   uuid: ^4.5.1
   shared_preferences: ^2.5.3
+  connectivity_plus: ^6.1.0
 
 dev_dependencies:
   flutter_test:
